--- a/app/src/main/res/layout/list_item_drive_asset.xml
+++ b/app/src/main/res/layout/list_item_drive_asset.xml
@@ -3,12 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
+    android:minHeight="?android:attr/listPreferredItemHeight"
     android:id="@+id/list_item_drive_asset_layout">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:minHeight="?android:attr/listPreferredItemHeight"
         android:id="@+id/list_item_drive_asset_title"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/list_item_drive_asset_title"
+        android:id="@+id/list_item_drive_asset_type"/>
 
 </RelativeLayout>
