adding the edit view

--- a/app/src/main/res/layout/fragment_note_list.xml
+++ b/app/src/main/res/layout/fragment_note_list.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sinova.jcli.offrecord.MainActivityFragment"
+    tools:context=".MainActivityFragmentNotesList"
     tools:showIn="@layout/activity_main">
 
     <ListView
