--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,11 +2,11 @@
     <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
     <!--xmlns:tools="http://schemas.android.com/tools"-->
     <!--android:id="@+id/fragment"-->
-    <!--android:name="com.sinova.jcli.offrecord.MainActivityFragment"-->
+    <!--android:name="com.sinova.jcli.offrecord.MainActivityFragmentNotesListNotesList"-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="match_parent"-->
     <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
-    <!--tools:layout="@layout/fragment_main" />-->
+    <!--tools:layout="@layout/fragment_note_list" />-->
 
 <android.support.v4.view.ViewPager
     android:id="@+id/viewpager"
